기상청 관련 오류 핸들링, Warn 시스템
.
