# swagger/api/path.yaml
@@ -130,6 +130,19 @@
       '200':
         description: 각 부이 그룹의 전체 평균 데이터
 
+/main/warn:
+  get:
+    tags:
+      - main
+    description: 메인에서 각 그룹별 경고 리스트를 가져옵니다.
+    responses:
+      '200':
+        description: 각 부이 그룹별 현재 경고 리스트
+        content:
+          apllication/json:
+            schema:
+              $ref: '../swagger.yaml#/components/schemas/WarnList'
+
 ###############################
 #           Detiail           #
 ###############################
@@ -156,9 +169,7 @@
 
       ## 라인별로 라인의 현재 정보와, 라인의 히스토리, 라인안에 있는 스마트 부표의 데이터들을 가져옵니다.
 
-      ## 라인별로 값은 line_라인번호로 객체형식으로 받습니다.
-
-
+      ## 라인별로 배열로 데이터를 받습니다 _line_info 안에 라인 정보가 들어있습니다.
 
       ### 라인에 속해이는 부표들의 값들을 가져옵니다.
 
@@ -208,7 +219,7 @@
               ],
 
       ### 현재 라인의 평균 정보 입니다.
-
+            "_line_info" {
               "group_name": 라인이 속한 이름입니다.
               "line": 라인 번호입니다.,
               "latitude": 라인의 lat,
@@ -217,8 +228,8 @@
               "water_temp": 평균 온도,
               "weight": 평균 무게입니다.
               "height": 평균 높이입니다.
-
-            },
+            }
+          },
 
     parameters:
       - in: query
